# SlimeyJourney

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
data/maps/: 0.tmx  10.tmx  11.tmx  14.tmx  15.tmx  16.tmx  2.tmx  3.tmx  4.tmx  5.tmx  6.tmx  7.tmx  8.tmx
data/maps/plains/: 0.tmx  1.tmx  10.tmx  11.tmx  2.tmx  3.tmx  4.tmx  5.tmx  6.tmx  7.tmx  8.tmx  9.tmx
data/maps/tilesets/: 0.tsx
data/maps/tutorial/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx
maps/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx  5.tmx
src/core/: config.h  game.h
src/core/private/: config.cpp  game.cpp
src/engine/: database.h  defines.h  graphics.h  util.h  vector.h
src/engine/private/: database.cpp  defines.cpp  graphics.cpp  util.cpp  vector.cpp
src/entities/: ball.h  cloud.h  fren.h  player.h  spike.h  stone.h
src/entities/enemies/: slime.h
src/entities/private/: cloud.cpp  fruit.cpp  player.cpp  spike.cpp  stone.cpp
src/sprites/: ball.h  enemy.h  flag.h  fren.h  fruit.h  grass.h  heart.h  object.h  pad.h  player.h  slime.h
src/sprites/enemies/: slime.h
src/sprites/private/: ball.cpp  ememy.cpp  flag.cpp  fren.cpp  fruit.cpp  grass.cpp  heart.cpp  object.cpp  pad.cpp  player.cpp  slime.cpp
src/tools/: LOS.h  enemy.h  level.h  map.h  quest.h  sprite.h  table.h  timer.h  ui.h  widget.h
src/tools/database/: database.h
src/tools/private/: LOS.cpp  database.cpp  dialogue.cpp  ememy.cpp  enemy.cpp  level.cpp  map.cpp  quest.cpp  sprite.cpp  table.cpp  timer.cpp  widget.cpp
src/ui/: button.h  progress.h
src/widgets/: button.h  card.h  carousel.h  progress.h  toggle.h
(+26 files in other folders)
